Added projects section

--- a/source/about/index.html
+++ b/source/about/index.html
@@ -38,10 +38,4 @@ title: About Me
     </ul>
   </article>
 </div>
-<aside class="sidebar">
-  {% if site.blog_index_asides.size %}
-    {% include_array blog_index_asides %}
-  {% else %}
-    {% include_array default_asides %}
-  {% endif %}
-</aside>
+{% include sidebar.html %}
